[gd_scene load_steps=11 format=3 uid="uid://d46wrkgdeynk"]

[ext_resource type="Script" path="res://scripts/initialize.gd" id="1_xecma"]
[ext_resource type="Script" path="res://scripts/locomotion.gd" id="2_kvn2k"]
[ext_resource type="PackedScene" uid="uid://bu07alt6vkbaq" path="res://addons/godot-xr-tools/hands/model/Hand_Glove_L.gltf" id="3_v5v08"]
[ext_resource type="PackedScene" uid="uid://w7th3d2hl7b5" path="res://addons/godot-xr-tools/hands/model/Hand_Glove_R.gltf" id="4_cmvb2"]
[ext_resource type="PackedScene" uid="uid://bjqbrafyuiaqd" path="res://soccer_stadium/scene.gltf" id="5_v5ou3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_osj4q"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_noqmy"]
sky_material = SubResource("ProceduralSkyMaterial_osj4q")

[sub_resource type="Environment" id="Environment_pi0m0"]
background_mode = 2
sky = SubResource("Sky_noqmy")
tonemap_mode = 2
fog_density = 0.001
fog_sky_affect = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_6n7no"]

[sub_resource type="SphereShape3D" id="SphereShape3D_l430i"]

[node name="Main" type="Node3D"]
script = ExtResource("1_xecma")

[node name="XROrigin3D" type="XROrigin3D" parent="."]
transform = Transform3D(0.999957, 0, 0.00923268, 0, 1, 0, -0.00923268, 0, 0.999957, 14.9945, -0.64037, 29.1168)
script = ExtResource("2_kvn2k")

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
far = 500.0

[node name="LeftController" type="XRController3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 1.4, -0.4)
tracker = &"left_hand"
pose = &"aim"

[node name="Hand_Glove_L" parent="XROrigin3D/LeftController" instance=ExtResource("3_v5v08")]

[node name="RightController" type="XRController3D" parent="XROrigin3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 1.4, -0.4)
tracker = &"right_hand"
pose = &"aim"

[node name="Hand_Glove_R" parent="XROrigin3D/RightController" instance=ExtResource("4_cmvb2")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pi0m0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="field" parent="." instance=ExtResource("5_v5ou3")]
transform = Transform3D(0.075, 0, 0, 0, 0.075, 0, 0, 0, 0.075, 0, 0, 0)

[node name="KickAreaCorner1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.87343, 0, 12.8134)

[node name="KickAreaCorner2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.8758, 0, 22.8194)

[node name="Ball" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.054, 0.536984, 18.659)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ball"]
mesh = SubResource("SphereMesh_6n7no")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball"]
shape = SubResource("SphereShape3D_l430i")

[node name="GoalPost1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.4031, 0.0878197, 32.362)

[node name="GoalPost2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8277, 1.81328, 32.0867)

[node name="Saves" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7321, 9.28185, -9.97522)
text = "Saves: 0
"
font_size = 500

[node name="Misses" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7321, 6.60133, -9.97522)
modulate = Color(1, 0, 0, 1)
text = "Misses: 0"
font_size = 500

[connection signal="button_pressed" from="XROrigin3D/LeftController" to="." method="_on_left_controller_button_pressed"]
[connection signal="input_vector2_changed" from="XROrigin3D/LeftController" to="XROrigin3D" method="process_input"]
[connection signal="button_pressed" from="XROrigin3D/RightController" to="." method="_on_right_controller_button_pressed"]
[connection signal="button_pressed" from="XROrigin3D/RightController" to="XROrigin3D" method="_on_right_controller_button_pressed"]
[connection signal="input_vector2_changed" from="XROrigin3D/RightController" to="XROrigin3D" method="process_input"]
